--- a/Clash/RuleSet/Unbreak.yaml
+++ b/Clash/RuleSet/Unbreak.yaml
@@ -1,5 +1,11 @@
 payload:
   # Unbreak
+  # > General
+  - DOMAIN,app.adjust.com
+  - DOMAIN,bdtj.tagtic.cn
+  # > Alibaba
+  - DOMAIN,log.mmstat.com
+  - DOMAIN,sycm.mmstat.com
   # > Google
   - DOMAIN-SUFFIX,blog.google
   - DOMAIN-SUFFIX,googletraveladservices.com
@@ -7,7 +13,7 @@ payload:
   - DOMAIN,dl.google.com
   - DOMAIN,dl.l.google.com
   - DOMAIN,update.googleapis.com
-  - DOMAIN,translate.googleapis.com
+  # - DOMAIN,translate.googleapis.com
   # >> Firebase Cloud Messaging
   - DOMAIN,mtalk.google.com
   - DOMAIN,alt1-mtalk.google.com
@@ -18,3 +24,17 @@ payload:
   - DOMAIN,alt6-mtalk.google.com
   - DOMAIN,alt7-mtalk.google.com
   - DOMAIN,alt8-mtalk.google.com
+  # >> Paramount+
+  # DOMAIN,pubads.g.doubleclick.net
+  # > Tencent
+  - DOMAIN,fairplay.l.qq.com
+  - DOMAIN,livew.l.qq.com
+  - DOMAIN,vd.l.qq.com
+  - DOMAIN,vi.l.qq.com
+  # > Strava
+  - DOMAIN,analytics.strava.com
+  # > Umeng
+  - DOMAIN,msg.umeng.com
+  - DOMAIN,msg.umengcloud.com
+  # > Xiaomi
+  - DOMAIN-SUFFIX,mi.com
